--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/nodemon": "^1.19.2",
+    "@types/winston": "^2.4.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "winston": "^3.8.2"
   },
   "dependencies": {
     "express": "^4.18.2"
