--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "winston": "^3.8.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "4.8.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "prisma": "^4.8.1"
   }
 }
