--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/nodemon": "^1.19.2",
     "@types/winston": "^2.4.4",
@@ -20,8 +21,10 @@
   },
   "dependencies": {
     "@prisma/client": "4.8.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "prisma": "^4.8.1"
   }
 }
