--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/nodemon": "^1.19.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/winston": "^2.4.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
