--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemon": "^1.19.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/winston": "^2.4.4",
@@ -25,6 +26,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "prisma": "^4.8.1",
     "swagger-ui-express": "^4.6.0"
