--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +19,11 @@
     "@types/nodemon": "^1.19.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/winston": "^2.4.4",
+    "@vitest/coverage-istanbul": "^0.28.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "vitest": "^0.28.1",
     "winston": "^3.8.2"
   },
   "dependencies": {
